--- a/.github/workflows/generate-themes.yml
+++ b/.github/workflows/generate-themes.yml
@@ -23,12 +23,13 @@ jobs:
           $SourceDiff = $diff | Where-Object { $_ -match '^tokens/' -or $_ -match '.json$' }
           $HasDiff = $SourceDiff.Length -gt 0
 
-          Write-Host "::set-output name=json_changed::$HasDiff"
+          echo "{$HasDiff}"
+          echo "JSON_CHANGED=$HasDiff" >> $GITHUB_OUTPUT
 
   conditional_theme_generation:
     runs-on: ubuntu-latest
     needs: [ conditional_job_check_files ]
-    if: needs.conditional_job_check_files.outputs.json_changed == 'True'
+    if: needs.conditional_job_check_files.outputs.JSON_CHANGED == 'True'
     steps:
     - shell: pwsh
       run: echo "yes!"
