--- a/.github/workflows/generate-themes.yml
+++ b/.github/workflows/generate-themes.yml
@@ -4,32 +4,16 @@ on:
   push:
     branches:
       - 'master'
+    paths:
+      - 'tokens/**.json'
 
 jobs:
 
-  conditional_job_check_files:
-    runs-on: ubuntu-latest
-    outputs:
-      docs_changed: ${{ steps.check_file_changed.outputs.json_changed }}
+  generate_themes:
+    name: Generate Themes
+    runs-on: ubuntu-20.04
+    container:
+      image: node: 18.14.2
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-      - shell: pwsh
-        id: check_file_changed
-        run: |
-          $diff = git diff --name-only HEAD^ HEAD
-
-          $SourceDiff = $diff | Where-Object { $_ -match '^tokens/' -or $_ -match '.json$' }
-          $HasDiff = $SourceDiff.Length -gt 0
-
-          echo "{$HasDiff}"
-          echo "JSON_CHANGED=$HasDiff" >> $GITHUB_OUTPUT
-
-  conditional_theme_generation:
-    runs-on: ubuntu-latest
-    needs: [ conditional_job_check_files ]
-    if: needs.conditional_job_check_files.outputs.JSON_CHANGED == 'True'
-    steps:
-    - shell: pwsh
-      run: echo "yes!"
+     - run: npm ci
+     - run: echo "done"
