--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint-staged": "lint-staged --no-stash",
     "generate-themes": "ts-node src/generateThemes.ts",
     "pregenerate-themes": "rm generated/*.ts || true",
-    "postgenerate-themes": "npm run lint-fix -- src/themes",
-    "prepare": "husky install"
+    "postgenerate-themes": "npm run lint-fix -- src/themes"
   },
   "repository": {
     "type": "git",
