--- a/.github/workflows/generate-themes.yml
+++ b/.github/workflows/generate-themes.yml
@@ -15,6 +15,16 @@ jobs:
     container:
       image: node:18.14.2-alpine
     steps:
-      - uses: actions/checkout@v3
-      - run: npm ci
-      - run: npm run generate-themes
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Generate themes
+        run: npm run generate-themes
+      - name: Commit generated themes
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: Show GitHub Actions logo
+          committer_name: GitHub Actions
+          committer_email: actions@github.com
+          message: 'Automated update of themes on token change'
