--- a/.github/workflows/generate-themes.yml
+++ b/.github/workflows/generate-themes.yml
@@ -31,3 +31,4 @@ jobs:
           committer_name: GitHub Actions
           committer_email: actions@github.com
           message: 'Automated update of themes on token change'
+          add: '*.ts'
