--- a/.github/workflows/test-tag.yml
+++ b/.github/workflows/test-tag.yml
@@ -4,13 +4,34 @@ on:
   pull_request
 
 jobs:
+  generate_tag:
+    name: Generate Image Tag
+    runs-on: self-hosted
+    outputs:
+      image-tag: ${{ steps.generate-tag.outputs.image-tag }}
+      image-ref: ${{ steps.generate-tag.outputs.image-ref }}
+    steps:
+      - id: generate-tag
+        run: |
+          REF=${GITHUB_REF#*/}
+          REF=${REF#*/}
+          REF=${REF%%/*}
+          if [[ $GITHUB_REF =~ ^refs\/pull ]]; then
+            REF="PR-$REF"
+          fi
+          if [[ $GITHUB_REF =~ ^refs\/tags ]]; then
+            REF+="_$(date +'%Y%m%d-%H%M%S')"
+          fi
+          echo "::set-output name=image-tag::${{ inputs.registry_url }}/${{ inputs.app }}:$REF"
+          echo "::set-output name=image-ref::$REF"
 
   test_tag:
     name: Test tag
     runs-on: ubuntu-20.04
+    needs: generate_tag
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Echo tag
         run: |
-          docker build --build-arg TAG="${GITHUB_REF#refs/heads/} ${GITHUB_SHA::6}" .
+          docker build --build-arg TAG="${{ needs.generate_tag.outputs.image-tag }} ${GITHUB_SHA::6}" .
