--- a/.github/workflows/test-tag.yml
+++ b/.github/workflows/test-tag.yml
@@ -6,10 +6,11 @@ on:
 jobs:
   generate_tag:
     name: Generate Image Tag
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04
     outputs:
       image-tag: ${{ steps.generate-tag.outputs.image-tag }}
       image-ref: ${{ steps.generate-tag.outputs.image-ref }}
+      build-time: ${{ steps.generate-tag.outputs.build-time }}
     steps:
       - id: generate-tag
         run: |
@@ -22,8 +23,10 @@ jobs:
           if [[ $GITHUB_REF =~ ^refs\/tags ]]; then
             REF+="_$(date +'%Y%m%d-%H%M%S')"
           fi
+          BUILD_TIME=$(date +"%Y-%m-%d %T")
           echo "::set-output name=image-tag::${{ inputs.registry_url }}/${{ inputs.app }}:$REF"
           echo "::set-output name=image-ref::$REF"
+          echo "::set-output name=build-time::$BUILD_TIME"
 
   test_tag:
     name: Test tag
@@ -34,4 +37,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Echo tag
         run: |
-          docker build --build-arg TAG="${{ needs.generate_tag.outputs.image-tag }} ${GITHUB_SHA::6}" .
+          docker build --build-arg TAG="${{ needs.generate_tag.outputs.image-tag }} ${GITHUB_SHA::6}" --build-arg "$BUILD_TIME" .
