--- a/.github/workflows/test-tag.yml
+++ b/.github/workflows/test-tag.yml
@@ -37,4 +37,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Echo tag
         run: |
-          docker build --build-arg TAG="${{ needs.generate_tag.outputs.image-tag }} ${GITHUB_SHA::6}" --build-arg "$BUILD_TIME" .
+          docker build --build-arg TAG="${{ needs.generate_tag.outputs.image-tag }} ${GITHUB_SHA::6}" --build-arg BUILD_TIME="$BUILD_TIME" .
