--- a/.github/workflows/credit_topup.yml
+++ b/.github/workflows/credit_topup.yml
@@ -7,5 +7,8 @@ env:
   DOCKERFILE: "${{ GITHUB_WORKSPACE }}/cmd/credit-topup/Dockerfile"
 
 jobs:
-  - name: Show values
-    run: echo "$DOCKERFILE"
+  build-and-push:
+    name: Build and Push
+    steps:
+      - name: Show values
+        run: echo "$DOCKERFILE"
