--- a/.github/workflows/credit_topup.yml
+++ b/.github/workflows/credit_topup.yml
@@ -4,11 +4,13 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKERFILE: "${{ GITHUB_WORKSPACE }}/cmd/credit-topup/Dockerfile"
+  DOCKERFILE: "${{ env.GITHUB_WORKSPACE }}/cmd/credit-topup/Dockerfile"
 
 jobs:
   build-and-push:
     name: Build and Push
     steps:
+      - name: Show values
+        run: echo '${{ env.GITHUB_WORKSPACE }}'
       - name: Show values
         run: echo "$DOCKERFILE"
